--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,4 +5,6 @@ body {
     color:red;
     font-size:20px;
   }
+
+  background:url('https://www.lgstatic.com/parttime-jobs/static/myself/modules/common/img/top-bg_c3d43c9.jpg');
 }
