--- a/src/js/client.scss
+++ b/src/js/client.scss
@@ -1,5 +1,18 @@
 $imgRoot: 'http://10.18.99.12:18099/images/client/';
+/**
+yizhao-search-color-or
+angeyizhao-search-col
+or-orangeyizhao-search-
+color-orangeyizhao-searc.
+h-color-orangeyizhao-s
+earch-color-orangeyizhao
+-search-color-orangeyizh
+ao-search-color-orangeyiz
+hao-search-color-orang
+eyizhao-search-color-orange
+*/
 .yizhao-search-color-orange {
+    display: flex;
     color:#ff8b03;
     font-size:14px;
     vertical-align:baseline;
