--- a/src/js/client.scss
+++ b/src/js/client.scss
@@ -1,4 +1,4 @@
-$imgRoot: 'http://10.18.99.12:18099/images/client/';
+$imgRoot: '/images/client/';
 /**
 yizhao-search-color-or
 angeyizhao-search-col
